--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,6 +38,11 @@ jobs:
           node-version: "18"
           cache: "yarn"
 
+      - name: Enable Corepack and set Yarn version
+        run: |
+          corepack enable
+          corepack prepare yarn@4.2.2 --activate
+
       - name: Install dependencies
         run: yarn install
 
